Various improvement
